--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <h3 id="new-cases">New Cases</h3>
   <p>An intuitive way to gauge contagiousness on campus is by looking at the new daily new cases:</p>
   <img src="https://anishthite.github.io/gtcovid/gtdaily.png" alt="Image">
+  <br>
+  <img src="https://anishthite.github.io/gtcovid/gtdaily14win.png" alt="Image">
   <p>It's a bit noisy so we can smooth it out. Here's a 3-day moving average, as well as a weekly tally:</p>
   <img src="https://anishthite.github.io/gtcovid/gtweekly.png" alt="Image">
   <br>
@@ -14,6 +16,8 @@
   <h3 id="campus-impact">Campus Impact</h3>
   <p>What really matters is campus impact. We can filter out all of the non-campus impacted (the heuristic of removing all cases where "impact" is in the Campus Impact description works for now). Here are all of the above charts with the Campus Impact cases overlaid. </p>
   <img src="https://anishthite.github.io/gtcovid/gtdailyboth.png" alt="Image">
+  <br>
+  <img src="https://anishthite.github.io/gtcovid/gtdailyboth14win.png" alt="Image">
   <br>
   <img src="https://anishthite.github.io/gtcovid/gtweeklyboth.png" alt="Image">
   <br>
