--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f17040c4c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f91babac6d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1703d93450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1703d93650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f91ba8bb490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f91ba8bb690&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f170433fdd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f170433ffd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f91bae66d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f91bae66f90&gt;]</pre>
 </div>
 
 </div>
