--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="child" style="font-size: 16pt; margin-left : 11%; margin-right : 11%; line-height: 1.8; float: right;">
+  <div class="child" style="font-size: 16pt; margin-left : 11%; margin-right : 11%; line-height: 1.8; ">
   <h2 id="georgia-tech-coronavirus-tracking">Georgia Tech Coronavirus Tracking</h2>
   <p>So I've been following <a href="http://health.gatech.edu/coronavirus/health-alerts">http://health.gatech.edu/coronavirus/health-alerts</a> to see how safe campus is, but it's kinda hard to actually see what's going on simply from the tables.
   Let's vizualize it!
