--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6a7e99ddd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1fe7d3b2d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6a7ef72850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6a7ef72a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1fe7d2b750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1fe7d2b950&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6a7f51a190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6a7f51a390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1fe82d6090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1fe82d6290&gt;]</pre>
 </div>
 
 </div>
