--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc3a5971590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb2927b5e50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc3a5319210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc3a5334750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb2919be4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb2919be6d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc3a58d0b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc3a58e5090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb291f5cd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb291f5cf50&gt;]</pre>
 </div>
 
 </div>
