--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbcbe488fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f466c9225d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbcbe18bb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbcbe18b650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f466c632cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f466c632a50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbcbe735f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbcbe742190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f466cbdfdd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f466cbdffd0&gt;]</pre>
 </div>
 
 </div>
