--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f967c91ce10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f84bc902450&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f967c658390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f967c658590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f84bc602410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f84bc61a710&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f967cc09d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f967cc09f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f84bcbbbcd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f84bcbc4fd0&gt;]</pre>
 </div>
 
 </div>
