--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa9d910b190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f69dc0707d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9d822d3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa9d822d5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f69dc0be590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f69dc0be790&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9d87d9cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa9d87d9ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f69dc668f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f69dc675150&gt;]</pre>
 </div>
 
 </div>
