--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f68331c6c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff2fce89110&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6832efd450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6832efd650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2fcade5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff2fcade7d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6833499e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6833499fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2fd089ed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff2fd094110&gt;]</pre>
 </div>
 
 </div>
