--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8478460090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5a756a9550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f847812c190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f847812c350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a75081510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5a75081710&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f84786d6f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f84786e3150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a75621e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5a7562c090&gt;]</pre>
 </div>
 
 </div>
