--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9b1adedc50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f58b3620710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b1ab0e450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9b1ab0e650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f58b33122d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f58b33124d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b1b0b9d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9b1b0b9f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f58b38a8c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f58b38a8e10&gt;]</pre>
 </div>
 
 </div>
