--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcd6e899490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd9ec696710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcd6e263bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcd6e263dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd9ecc51750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd9ecc62ad0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcd6e811590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcd6e811790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd9ed213050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd9ed21e390&gt;]</pre>
 </div>
 
 </div>
