--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb235b97e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7754863290&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb236163a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb236163c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f77544c5ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f77544c5cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb236717350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb236717550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7754a72510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7754a72710&gt;]</pre>
 </div>
 
 </div>
