--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6aceff9b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff2a56a7290&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ace9bdb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ace9bdd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2a5317a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff2a5317c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6acef6a450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6acef6a650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2a58cb410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff2a58cb610&gt;]</pre>
 </div>
 
 </div>
