--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f04bf917e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3933a4ed50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f04bf571b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f04bf571d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f39336ccb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f39336ccd50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f04bfb18450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f04bfb18650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3933c71450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3933c71650&gt;]</pre>
 </div>
 
 </div>
