--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbf6bfcc090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe62b5cea90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf6b994990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbf6b994b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe62af97b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe62af97cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf6bf442d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbf6bf444d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe62b5413d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe62b541550&gt;]</pre>
 </div>
 
 </div>
