--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb8ac38a290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f54f63a55d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb8abd69a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb8abd69c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f54f5d458d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f54f5d78c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb8ac31e310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb8ac31e510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f54f6314190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f54f631f590&gt;]</pre>
 </div>
 
 </div>
