--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c3157f1d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f01cec608d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c311ccad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c311cccd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f01ce8b4bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f01ce8b4dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c31780410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c31780610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f01cee61410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f01cee61610&gt;]</pre>
 </div>
 
 </div>
